Improve intrinsic test coverage for ArraysSupport.vectorizedHashCode